--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,3 +11,13 @@ body {
 .navbar {
   background-color: transparent;
 }
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #222;
+  color: #fff;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
